# smartcheck

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SETUP_GUIDE.md  auth_server.py  build.gradle.kts  gradle.properties  natapp.ini  settings.gradle.kts  smartcheck.jks
.github/: pull_request_template.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/smartcheck/app/: App.kt  MainActivity.kt
app/src/main/java/com/smartcheck/app/api/: ApiService.kt  JwtUtil.kt  KtorServerManager.kt
app/src/main/java/com/smartcheck/app/api/model/: ApiModels.kt
app/src/main/java/com/smartcheck/app/data/db/: ApiAccessLogDao.kt  ApiAccessLogEntity.kt  ApiTokenDao.kt  ApiTokenEntity.kt  AppDatabase.kt  RecordDao.kt  RecordEntity.kt  SystemUserDao.kt  SystemUserEntity.kt  UserDao.kt  UserEntity.kt
app/src/main/java/com/smartcheck/app/data/repository/: AdminAuthRepository.kt  HardwareRepository.kt  RecordRepository.kt  SettingsRepository.kt  TemperatureServiceImpl.kt  UserRepository.kt
app/src/main/java/com/smartcheck/app/data/serial/: SerialPortManager.kt
app/src/main/java/com/smartcheck/app/data/upload/: CloudRecordService.kt  NoOpRecordUploadReporter.kt  RecordUploadReporter.kt
app/src/main/java/com/smartcheck/app/di/: AppModule.kt
app/src/main/java/com/smartcheck/app/domain/model/: AppError.kt  CheckResultStatus.kt  DomainMappers.kt  HandStatus.kt  HealthCertStatus.kt  Record.kt  Result.kt  SymptomType.kt  User.kt
app/src/main/java/com/smartcheck/app/domain/repository/: IAdminAuthService.kt  IRecordRepository.kt  ITemperatureService.kt  IUserRepository.kt  IVoiceService.kt
app/src/main/java/com/smartcheck/app/domain/usecase/: ImageStorageUseCase.kt  MorningCheckUseCase.kt  PerformanceMetrics.kt  RecordManageUseCase.kt  SystemMonitor.kt  UserActionTracker.kt  UserManageUseCase.kt
app/src/main/java/com/smartcheck/app/ml/: FaceEngine.kt  MockFaceEngine.kt  SeetaFaceEngine.kt
app/src/main/java/com/smartcheck/app/ui/components/: CameraCaptureDialog.kt  CameraPreview.kt  CoordinateMapper.kt  DualCameraPreview.kt  FaceOverlay.kt  HandOverlay.kt  RecordDetailDialog.kt  ResultCard.kt
app/src/main/java/com/smartcheck/app/ui/navigation/: AppNavigation.kt
app/src/main/java/com/smartcheck/app/ui/screens/: AdminLoginScreen.kt  AdminScreen.kt  DashboardScreen.kt  EmployeeCloudImportScreen.kt  EmployeeDetailScreen.kt  EmployeeEnrollScreen.kt  EmployeeListScreen.kt  FaceTestScreen.kt  HandCheckScreen.kt  HandTestScreen.kt  HomeScreen.kt  RecordDetailScreen.kt  ReportExportScreen.kt  SettingsScreen.kt
app/src/main/java/com/smartcheck/app/ui/theme/: Color.kt  Dimens.kt  Theme.kt  Type.kt
app/src/main/java/com/smartcheck/app/utils/: DeviceAuth.kt  DeviceInfo.kt  FileLoggingTree.kt  FileUtil.kt
app/src/main/java/com/smartcheck/app/viewmodel/: AdminAuthViewModel.kt  AdminViewModel.kt  CheckState.kt  CloudImportViewModel.kt  EmployeeDetailViewModel.kt  EmployeeEnrollViewModel.kt  EmployeeListViewModel.kt  FaceTestViewModel.kt  MainViewModel.kt  RecordDetailViewModel.kt  RecordsViewModel.kt  ReportExportViewModel.kt  SettingsViewModel.kt
app/src/main/java/com/smartcheck/app/voice/: VoicePrompter.kt
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/smartcheck/app/domain/usecase/: MorningCheckUseCaseTest.kt  UserManageUseCaseTest.kt
docs/: DEVELOPMENT_WORKFLOW.md  DEVICE_REGRESSION_CHECKLIST.md  PR_TEMPLATE.md  QUALITY_GATES.md  ui-components.md  ui-design.md  ui-implementation-plan.md  ui-visual-guidelines.md  技术规范.md  接口.txt  接口设计.md  数据库设计.md  日志与监控规范.md  晨检仪接口文档.md  架构设计.md  用例清单.md  类.txt  综合评审报告.md  重构实施计划.md  需求说明.md  项目交付审查报告.md
face-sdk/: build.gradle.kts  proguard-rules.pro
face-sdk/src/main/cpp/: CMakeLists.txt  face_sdk_jni.cpp
face-sdk/src/main/java/com/smartcheck/sdk/face/: FaceInfo.kt  FaceSdk.kt
hand-sdk/: RKNN_INTEGRATION_GUIDE.md  build.gradle.kts  proguard-rules.pro
hand-sdk/src/main/: AndroidManifest.xml
hand-sdk/src/main/cpp/: CMakeLists.txt  common.h  foreign_rknn_engine.cpp  foreign_rknn_engine.h  hand_detector_jni.cpp  hand_rknn_engine.cpp  hand_rknn_engine.h
hand-sdk/src/main/java/com/smartcheck/sdk/: HandDetector.kt
log/: posin-MD101-Android-11_2026-03-02_164138.logcat  posin-MD101-Android-11_2026-03-02_171809.logcat  posin-MD101-Android-11_2026-03-04_152705.logcat  posin-MD101-Android-11_2026-03-04_161246.logcat  posin-MD101-Android-11_2026-03-05_134209.logcat
sf6.0_android/example/FaceRecognizerDemo/: build.gradle  proguard-rules.pro
sf6.0_android/example/FaceRecognizerDemo/gradle/wrapper/: gradle-wrapper.properties
sf6.0_android/example/SilentLiving/: build.gradle
sf6.0_android/example/SilentLiving/gradle/wrapper/: gradle-wrapper.properties
sf6.0_android/example/SilentLiving/src/main/java/com/seetatech/silentliving/camera/: CameraPreview2.java
sf6.0_android/example/SilentLiving/src/main/java/com/seetatech/silentliving/config/: AppConfig.java
sf6.0_android/example/SilentLiving/src/main/java/com/seetatech/silentliving/mvp/: MainFragment.java  PresenterImpl.java  VerificationContract.java
sf6.0_android/example/SilentLiving/src/main/res/layout/: activity_launch.xml
sf6.0_android/example/SilentLiving/src/main/res/layout-mdpi/: fragment_main.xml
